--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>This is a test</h1>
+    <img src="/assets/images/gallery/image-1.jpg">
+    <img src="/assets/images/gallery/image-2.jpg">
 </body>
 </html>
