--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,11 +7,11 @@
 		<meta name="description" content="站长素材提供Bootstrap模版,Bootstrap教程,Bootstrap中文翻译等相关Bootstrap插件下载" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- basic styles -->
-		<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+		<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
 
 		<!--[if IE 7]>
-		  <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
+		  <link rel="stylesheet" href="/assets/css/font-awesome-ie7.min.css" />
 		<![endif]-->
 
 		<!-- page specific plugin styles -->
@@ -22,25 +22,25 @@
 
 		<!-- ace styles -->
 
-		<link rel="stylesheet" href="assets/css/ace.min.css" />
-		<link rel="stylesheet" href="assets/css/ace-rtl.min.css" />
-		<link rel="stylesheet" href="assets/css/ace-skins.min.css" />
+		<link rel="stylesheet" href="/assets/css/ace.min.css" />
+		<link rel="stylesheet" href="/assets/css/ace-rtl.min.css" />
+		<link rel="stylesheet" href="/assets/css/ace-skins.min.css" />
 
 		<!--[if lte IE 8]>
-		  <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
+		  <link rel="stylesheet" href="/assets/css/ace-ie.min.css" />
 		<![endif]-->
 
 		<!-- inline styles related to this page -->
 
 		<!-- ace settings handler -->
 
-		<script src="assets/js/ace-extra.min.js"></script>
+		<script src="/assets/js/ace-extra.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
 		<!--[if lt IE 9]>
-		<script src="assets/js/html5shiv.js"></script>
-		<script src="assets/js/respond.min.js"></script>
+		<script src="/assets/js/html5shiv.js"></script>
+		<script src="/assets/js/respond.min.js"></script>
 		<![endif]-->
 	</head>
 
@@ -213,7 +213,7 @@
 
 								<li>
 									<a href="#">
-										<img src="assets/avatars/avatar.png" class="msg-photo" alt="Alex's Avatar" />
+										<img src="/assets/avatars/avatar.png" class="msg-photo" alt="Alex's Avatar" />
 										<span class="msg-body">
 											<span class="msg-title">
 												<span class="blue">Alex:</span>
@@ -230,7 +230,7 @@
 
 								<li>
 									<a href="#">
-										<img src="assets/avatars/avatar3.png" class="msg-photo" alt="Susan's Avatar" />
+										<img src="/assets/avatars/avatar3.png" class="msg-photo" alt="Susan's Avatar" />
 										<span class="msg-body">
 											<span class="msg-title">
 												<span class="blue">Susan:</span>
@@ -247,7 +247,7 @@
 
 								<li>
 									<a href="#">
-										<img src="assets/avatars/avatar4.png" class="msg-photo" alt="Bob's Avatar" />
+										<img src="/assets/avatars/avatar4.png" class="msg-photo" alt="Bob's Avatar" />
 										<span class="msg-body">
 											<span class="msg-title">
 												<span class="blue">Bob:</span>
@@ -273,7 +273,7 @@
 
 						<li class="light-blue">
 							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-								<img class="nav-user-photo" src="assets/avatars/user.jpg" alt="Jason's Photo" />
+								<img class="nav-user-photo" src="/assets/avatars/user.jpg" alt="Jason's Photo" />
 								<span class="user-info">
 									<small>欢迎光临,</small>
 									Jason
@@ -1217,7 +1217,7 @@
 															<div class="clearfix">
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Bob Doe's avatar" src="assets/avatars/user.jpg" />
+																		<img alt="Bob Doe's avatar" src="/assets/avatars/user.jpg" />
 																	</div>
 
 																	<div class="body">
@@ -1270,7 +1270,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Joe Doe's avatar" src="assets/avatars/avatar2.png" />
+																		<img alt="Joe Doe's avatar" src="/assets/avatars/avatar2.png" />
 																	</div>
 
 																	<div class="body">
@@ -1323,7 +1323,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Jim Doe's avatar" src="assets/avatars/avatar.png" />
+																		<img alt="Jim Doe's avatar" src="/assets/avatars/avatar.png" />
 																	</div>
 
 																	<div class="body">
@@ -1376,7 +1376,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Alex Doe's avatar" src="assets/avatars/avatar5.png" />
+																		<img alt="Alex Doe's avatar" src="/assets/avatars/avatar5.png" />
 																	</div>
 
 																	<div class="body">
@@ -1397,7 +1397,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Bob Doe's avatar" src="assets/avatars/avatar2.png" />
+																		<img alt="Bob Doe's avatar" src="/assets/avatars/avatar2.png" />
 																	</div>
 
 																	<div class="body">
@@ -1418,7 +1418,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Susan's avatar" src="assets/avatars/avatar3.png" />
+																		<img alt="Susan's avatar" src="/assets/avatars/avatar3.png" />
 																	</div>
 
 																	<div class="body">
@@ -1439,7 +1439,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Phil Doe's avatar" src="assets/avatars/avatar4.png" />
+																		<img alt="Phil Doe's avatar" src="/assets/avatars/avatar4.png" />
 																	</div>
 
 																	<div class="body">
@@ -1460,7 +1460,7 @@
 
 																<div class="itemdiv memberdiv">
 																	<div class="user">
-																		<img alt="Alexa Doe's avatar" src="assets/avatars/avatar1.png" />
+																		<img alt="Alexa Doe's avatar" src="/assets/avatars/avatar1.png" />
 																	</div>
 
 																	<div class="body">
@@ -1497,7 +1497,7 @@
 															<div class="comments">
 																<div class="itemdiv commentdiv">
 																	<div class="user">
-																		<img alt="Bob Doe's Avatar" src="assets/avatars/avatar.png" />
+																		<img alt="Bob Doe's Avatar" src="/assets/avatars/avatar.png" />
 																	</div>
 
 																	<div class="body">
@@ -1553,7 +1553,7 @@
 
 																<div class="itemdiv commentdiv">
 																	<div class="user">
-																		<img alt="Jennifer's Avatar" src="assets/avatars/avatar1.png" />
+																		<img alt="Jennifer's Avatar" src="/assets/avatars/avatar1.png" />
 																	</div>
 
 																	<div class="body">
@@ -1587,7 +1587,7 @@
 
 																<div class="itemdiv commentdiv">
 																	<div class="user">
-																		<img alt="Joe's Avatar" src="assets/avatars/avatar2.png" />
+																		<img alt="Joe's Avatar" src="/assets/avatars/avatar2.png" />
 																	</div>
 
 																	<div class="body">
@@ -1621,7 +1621,7 @@
 
 																<div class="itemdiv commentdiv">
 																	<div class="user">
-																		<img alt="Rita's Avatar" src="assets/avatars/avatar3.png" />
+																		<img alt="Rita's Avatar" src="/assets/avatars/avatar3.png" />
 																	</div>
 
 																	<div class="body">
@@ -1688,7 +1688,7 @@
 													<div class="dialogs">
 														<div class="itemdiv dialogdiv">
 															<div class="user">
-																<img alt="Alexa's Avatar" src="assets/avatars/avatar1.png" />
+																<img alt="Alexa's Avatar" src="/assets/avatars/avatar1.png" />
 															</div>
 
 															<div class="body">
@@ -1712,7 +1712,7 @@
 
 														<div class="itemdiv dialogdiv">
 															<div class="user">
-																<img alt="John's Avatar" src="assets/avatars/avatar.png" />
+																<img alt="John's Avatar" src="/assets/avatars/avatar.png" />
 															</div>
 
 															<div class="body">
@@ -1736,7 +1736,7 @@
 
 														<div class="itemdiv dialogdiv">
 															<div class="user">
-																<img alt="Bob's Avatar" src="assets/avatars/user.jpg" />
+																<img alt="Bob's Avatar" src="/assets/avatars/user.jpg" />
 															</div>
 
 															<div class="body">
@@ -1761,7 +1761,7 @@
 
 														<div class="itemdiv dialogdiv">
 															<div class="user">
-																<img alt="Jim's Avatar" src="assets/avatars/avatar4.png" />
+																<img alt="Jim's Avatar" src="/assets/avatars/avatar4.png" />
 															</div>
 
 															<div class="body">
@@ -1785,7 +1785,7 @@
 
 														<div class="itemdiv dialogdiv">
 															<div class="user">
-																<img alt="Alexa's Avatar" src="assets/avatars/avatar1.png" />
+																<img alt="Alexa's Avatar" src="/assets/avatars/avatar1.png" />
 															</div>
 
 															<div class="body">
@@ -1902,42 +1902,42 @@
 		<!--[if !IE]> -->
 
 		<script type="text/javascript">
-			window.jQuery || document.write("<script src='assets/js/jquery-2.0.3.min.js'>"+"<"+"script>");
+			window.jQuery || document.write("<script src='/assets/js/jquery-2.0.3.min.js'>"+"<"+"script>");
 		</script>
 
 		<!-- <![endif]-->
 
 		<!--[if IE]>
 <script type="text/javascript">
- window.jQuery || document.write("<script src='assets/js/jquery-1.10.2.min.js'>"+"<"+"script>");
+ window.jQuery || document.write("<script src='/assets/js/jquery-1.10.2.min.js'>"+"<"+"script>");
 </script>
 <![endif]-->
 
 		<script type="text/javascript">
-			if("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
+			if("ontouchend" in document) document.write("<script src='/assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
 		</script>
-		<script src="assets/js/bootstrap.min.js"></script>
-		<script src="assets/js/typeahead-bs2.min.js"></script>
+		<script src="/assets/js/bootstrap.min.js"></script>
+		<script src="/assets/js/typeahead-bs2.min.js"></script>
 
 		<!-- page specific plugin scripts -->
 
 		<!--[if lte IE 8]>
-		  <script src="assets/js/excanvas.min.js"></script>
+		  <script src="/assets/js/excanvas.min.js"></script>
 		<![endif]-->
 
-		<script src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
-		<script src="assets/js/jquery.ui.touch-punch.min.js"></script>
-		<script src="assets/js/jquery.slimscroll.min.js"></script>
-		<script src="assets/js/jquery.easy-pie-chart.min.js"></script>
-		<script src="assets/js/jquery.sparkline.min.js"></script>
-		<script src="assets/js/flot/jquery.flot.min.js"></script>
-		<script src="assets/js/flot/jquery.flot.pie.min.js"></script>
-		<script src="assets/js/flot/jquery.flot.resize.min.js"></script>
+		<script src="/assets/js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="/assets/js/jquery.ui.touch-punch.min.js"></script>
+		<script src="/assets/js/jquery.slimscroll.min.js"></script>
+		<script src="/assets/js/jquery.easy-pie-chart.min.js"></script>
+		<script src="/assets/js/jquery.sparkline.min.js"></script>
+		<script src="/assets/js/flot/jquery.flot.min.js"></script>
+		<script src="/assets/js/flot/jquery.flot.pie.min.js"></script>
+		<script src="/assets/js/flot/jquery.flot.resize.min.js"></script>
 
 		<!-- ace scripts -->
 
-		<script src="assets/js/ace-elements.min.js"></script>
-		<script src="assets/js/ace.min.js"></script>
+		<script src="/assets/js/ace-elements.min.js"></script>
+		<script src="/assets/js/ace.min.js"></script>
 
 		<!-- inline scripts related to this page -->
 
