init node key resource

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -884,10 +884,29 @@
 									</div><!-- /span -->
 								</div><!-- /row -->
 
+								<!-- Node key resource amount -->
 								<div class="hr hr32 hr-dotted"></div>
+								<div class="row">
+									<div class="col-xs-12">
+										<div class="row">
+											<div class="col-xs-6">
+												<button class="btn btn-app btn-pink btn-sm">
+												<i class="icon-share-alt bigger-200"></i>
+												Share
+											</button>
+											</div>
+											<div class="col-xs-6">
+												<button class="btn btn-app btn-pink btn-sm">
+												<i class="icon-share-alt bigger-200"></i>
+												Share
+											</button>
+											</div>
+										</div>
+									</div>
+								</div>
 
 
-								<!-- PAGE CONTENT ENDS -->
+								<!-- Node key resource amount ENDS -->
 							</div><!-- /.col -->
 						</div><!-- /.row -->
 					</div><!-- /.page-content -->
