--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -701,7 +701,7 @@
 						</div><!-- /.page-header -->
 
 						<div class="row">
-							<div class="col-xs-12">
+							<div class="col-xs-12 col-md-12">
 								<!-- PAGE CONTENT BEGINS -->
 
 								<div class="alert alert-block alert-success">
@@ -722,7 +722,7 @@
 								<div class="row">
 									<div class="space-6"></div>
 
-									<div class="col-xs-6">
+									<div class="col-xs-6 col-md-6">
 										<div class="widget-header widget-header-flat widget-header-small">
 												<h5>
 													<i class="icon-signal"></i>
@@ -887,17 +887,36 @@
 								<!-- Node key resource amount -->
 								<div class="hr hr32 hr-dotted"></div>
 								<div class="row">
-									<div class="col-xs-12">
+									<div class="col-xs-12 col-md-12">
 										<div class="row">
-											<div class="col-xs-6">
-												<button class="btn btn-app btn-pink btn-sm">
-												<i class="icon-share-alt bigger-200"></i>
+											<div class="col-xs-6 col-md-6">
+												<button class="btn btn-light btn-block btn-elg">
+												<i class="icon-bug icon-4x icon-only"></i>
 												Share
 											</button>
 											</div>
-											<div class="col-xs-6">
-												<button class="btn btn-app btn-pink btn-sm">
-												<i class="icon-share-alt bigger-200"></i>
+											<div class="col-xs-6 col-md-6">
+												<button class="btn btn-light btn-block btn-elg">
+												<i class="icon-tasks icon-4x icon-only"></i>
+												Share
+											</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="space-6"></div>
+								<div class="row">
+									<div class="col-xs-12 col-md-12">
+										<div class="row">
+											<div class="col-xs-6 col-md-6">
+												<button class="btn btn-light btn-block btn-elg">
+												<i class="icon-hdd icon-4x icon-only"></i>
+												Share
+											</button>
+											</div>
+											<div class="col-xs-6 col-md-6">
+												<button class="btn btn-light btn-block btn-elg">
+												<i class="icon-sitemap icon-4x icon-only"></i>
 												Share
 											</button>
 											</div>
