--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,6 +34,9 @@
 
 		<!-- ace settings handler -->
 
+		<!-- vultrainer styles -->
+		<link rel="stylesheet" type="text/css" href="/assets/css/vultrainer.min.css">
+
 		<script src="/assets/js/ace-extra.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -891,9 +894,12 @@
 										<div class="row">
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
-												<i class="icon-bug icon-4x icon-only"></i>
-												Share
-											</button>
+													<div class="summary-ico-case">
+														<i class="icon-bug icon-4x icon-only summary-ico-grey"></i>
+														
+													</div>
+													<div>Share</div>
+												</button>
 											</div>
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
