dashboard demo done

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -894,18 +894,37 @@
 										<div class="row">
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
-													<div class="summary-ico-case">
-														<i class="icon-bug icon-4x icon-only summary-ico-grey"></i>
+													<div class="summary-ico">
+														<i class="icon-bug icon-4x icon-only"></i>
 														
 													</div>
-													<div>Share</div>
+													<div class="summary-info">
+														<div class="summary-amount">
+															<div>2</div>
+															<div>Target Machines</div>
+														</div>
+														<div class="summary-status">
+															
+														</div>
+													</div>
 												</button>
 											</div>
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
-												<i class="icon-tasks icon-4x icon-only"></i>
-												Share
-											</button>
+													<div class="summary-ico">
+														<i class="icon-tasks icon-4x icon-only"></i>
+														
+													</div>
+													<div class="summary-info">
+														<div class="summary-amount">
+															<div>3</div>
+															<div>Target Images</div>
+														</div>
+														<div class="summary-status">
+															
+														</div>
+													</div>
+												</button>
 											</div>
 										</div>
 									</div>
@@ -916,15 +935,37 @@
 										<div class="row">
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
-												<i class="icon-hdd icon-4x icon-only"></i>
-												Share
-											</button>
+													<div class="summary-ico">
+														<i class="icon-hdd icon-4x icon-only"></i>
+														
+													</div>
+													<div class="summary-info">
+														<div class="summary-amount">
+															<div>2</div>
+															<div>Volumes</div>
+														</div>
+														<div class="summary-status">
+															
+														</div>
+													</div>
+												</button>
 											</div>
 											<div class="col-xs-6 col-md-6">
 												<button class="btn btn-light btn-block btn-elg">
-												<i class="icon-sitemap icon-4x icon-only"></i>
-												Share
-											</button>
+													<div class="summary-ico">
+														<i class="icon-sitemap icon-4x icon-only"></i>
+														
+													</div>
+													<div class="summary-info">
+														<div class="summary-amount">
+															<div>2</div>
+															<div>Networks</div>
+														</div>
+														<div class="summary-status">
+															
+														</div>
+													</div>
+												</button>
 											</div>
 										</div>
 									</div>
