--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +7,8 @@
 </head>
 <body>
     <h1>This is a test</h1>
+    <img src="{% static 'images/gallery/image-1.jpg' %}">
  
-    <h2>Hello, {{ testvar }}</h2>
+    <h2>Hello, </h2>
 </body>
 </html>
