--- a/app/templates/staticfiles.html
+++ b/app/templates/staticfiles.html
@@ -1,44 +1,45 @@
+{% load staticfiles %}
 		<!-- basic styles -->
-		<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
 
 		<!-- fonts -->
-		<link rel="stylesheet" href="/assets/css/font-apis.css" />
+		<link rel="stylesheet" href="{% static 'css/font-apis.css' %}" />
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="/assets/css/ace.min.css" />
-		<link rel="stylesheet" href="/assets/css/ace-rtl.min.css" />
-		<link rel="stylesheet" href="/assets/css/ace-skins.min.css" />
+		<link rel="stylesheet" href="{% static 'css/ace.min.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/ace-rtl.min.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/ace-skins.min.css' %}" />
 
 
 		<!-- vultrainer styles -->
-		<link rel="stylesheet" type="text/css" href="/assets/css/vultrainer.min.css">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/vultrainer.min.css' %}">
 
-		<script src="/assets/js/ace-extra.min.js"></script>
+		<script src="{% static 'js/ace-extra.min.js' %}"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 
 		<script type="text/javascript">
-			window.jQuery || document.write("<script src='/assets/js/jquery-2.0.3.min.js'>"+"<"+"script>");
+			window.jQuery || document.write("<script src='{% static 'js/jquery-2.0.3.min.js' %}>"+"<"+"script>");
 		</script>
 
 
 		<script type="text/javascript">
-			if("ontouchend" in document) document.write("<script src='/assets/js/jquery.mobile.custom.min.js'>"+"<"+"script>");
+			if("ontouchend" in document) document.write("<script src='{% static 'js/jquery.mobile.custom.min.js' %}>"+"<"+"script>");
 		</script>
-		<script src="/assets/js/bootstrap.min.js"></script>
-		<script src="/assets/js/typeahead-bs2.min.js"></script>
+		<script src="{% static 'js/bootstrap.min.js' %}"></script>
+		<script src="{% static 'js/typeahead-bs2.min.js' %}"></script>
 
 		<!-- page specific plugin scripts -->
-		<script src="/assets/js/jquery-ui-1.10.3.custom.min.js"></script>
-		<script src="/assets/js/jquery.ui.touch-punch.min.js"></script>
-		<script src="/assets/js/jquery.slimscroll.min.js"></script>
-		<script src="/assets/js/jquery.easy-pie-chart.min.js"></script>
-		<script src="/assets/js/jquery.sparkline.min.js"></script>
-		<script src="/assets/js/flot/jquery.flot.min.js"></script>
-		<script src="/assets/js/flot/jquery.flot.pie.min.js"></script>
-		<script src="/assets/js/flot/jquery.flot.resize.min.js"></script>
+		<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
+		<script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
+		<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+		<script src="{% static 'js/jquery.easy-pie-chart.min.js' %}"></script>
+		<script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
+		<script src="{% static 'js/flot/jquery.flot.min.js' %}"></script>
+		<script src="{% static 'js/flot/jquery.flot.pie.min.js' %}"></script>
+		<script src="{% static 'js/flot/jquery.flot.resize.min.js' %}"></script>
 
 		<!-- ace scripts -->
-		<script src="/assets/js/ace-elements.min.js"></script>
-		<script src="/assets/js/ace.min.js"></script>
+		<script src="{% static 'js/ace-elements.min.js' %}"></script>
+		<script src="{% static 'js/ace.min.js' %}"></script>
