--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         {% include 'staticfiles.html'%}
 
 </head>
-<body ng-app='vultrainer'>
+<body ng-app='vultrainer' ng-controller='vultrainerCtrl'>
         {% include 'navbar.html' %}
          <div class="main-container" id="main-container">
             <script type="text/javascript">
