--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -5,10 +5,10 @@
 <head>
     <title>test docker</title>
     <script src="{% static 'js/angular/angular.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/angular/angular-ui-router.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/angular/angular-ui-router.min.js' %}" type="text/javascript"></script>>
 </head>
 <body>
-     <div ng-app="testApp" ng-controller="siteCtrl" > 
+     <div ng-app="myApp" ng-controller="siteCtrl" > 
             <div ui-view></div> <!-- 视图 --> 
             <div>
             {%  verbatim%}
@@ -28,8 +28,7 @@
                             });
             }]);
             
-            var app = angular.module('testApp', []);
-                app.controller('siteCtrl', function($scope, $http) {
+            angular.module('myApp', []).controller('siteCtrl', function($scope, $http) {
                     $http.get("/1/dashboard/nodeinfo")
                     .then(function (response) {
                         $scope.arch = response.data.arch;
