--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -62,7 +62,7 @@
 							</h5>
 
 						</div>
-					<div class="table-responsive">
+					<div class="table-responsive" ng-controller='nodeInfoController'>
 						<table id="endpoint_info_table" class="table table-striped table-bordered table-hover">
 
 
