--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -62,6 +62,7 @@
 							</h5>
 
 						</div>
+					{% verbatim %}
 					<div class="table-responsive" ng-controller='nodeInfoController'>
 						<table id="endpoint_info_table" class="table table-striped table-bordered table-hover">
 
@@ -72,7 +73,7 @@
 										<a href="#">节点系统</a>
 									</td>
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.os_type }}</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.os_type }}</span>
 									</td>
 
 								</tr>
@@ -83,7 +84,7 @@
 									</td>
 
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.sys_name }}</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.sys_name }}</span>
 									</td>
 								</tr>
 
@@ -93,7 +94,7 @@
 									</td>
 
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.arch }}</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.arch }}</span>
 									</td>
 								</tr>
 
@@ -103,7 +104,7 @@
 									</td>
 
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.cpu_count }}</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.cpu_count }}</span>
 									</td>
 								</tr>
                                 
@@ -113,7 +114,7 @@
 									</td>
 
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.total_mem }} MB</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.total_mem/1024/1024 | number:0 }} MB</span>
 									</td>
 								</tr>
                                 
@@ -123,12 +124,13 @@
 									</td>
 
 									<td class="hidden-480">
-										<span class="label label-sm label-primary arrowed arrowed-right">{{ node_info.docker_version }}</span>
+										<span class="label label-sm label-primary arrowed arrowed-right">{{ nodeInfo.docker_version }}</span>
 									</td>
 								</tr>
 							</tbody>
 						</table>
 					</div><!-- /.table-responsive -->
+					{% endverbatim %}
 				</div>
 
 				<div class="vspace-sm"></div>
