--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <div class="breadcrumbs" id="breadcrumbs">
 	<script type="text/javascript">
 		try{ace.settings.check('breadcrumbs' , 'fixed')}catch(e){}
@@ -38,7 +40,7 @@
 
 			<div class="alert alert-block alert-success">
 				<button type="button" class="close" data-dismiss="alert">
-					<i class="icon-remove"></i>
+					<i class="fa fa-remove"></i>
 				</button>
 
 				<i class="icon-ok green"></i>
@@ -226,7 +228,7 @@
 						<div class="col-xs-6 col-md-6">
 							<button class="btn btn-light btn-block btn-elg">
 								<div class="summary-ico">
-									<i class="icon-bug icon-4x icon-only"></i>
+									<i class="fa fa-bug fa-4x icon-only"></i>
 									
 								</div>
 								<div class="summary-info">
@@ -243,7 +245,7 @@
 						<div class="col-xs-6 col-md-6">
 							<button class="btn btn-light btn-block btn-elg">
 								<div class="summary-ico">
-									<i class="icon-tasks icon-4x icon-only"></i>
+									<i class="fa fa-tasks fa-4x icon-only"></i>
 									
 								</div>
 								<div class="summary-info">
@@ -267,7 +269,7 @@
 						<div class="col-xs-6 col-md-6">
 							<button class="btn btn-light btn-block btn-elg">
 								<div class="summary-ico">
-									<i class="icon-hdd icon-4x icon-only"></i>
+									<i class="fa fa-hdd-o fa-4x icon-only"></i>
 									
 								</div>
 								<div class="summary-info">
@@ -284,7 +286,7 @@
 						<div class="col-xs-6 col-md-6">
 							<button class="btn btn-light btn-block btn-elg">
 								<div class="summary-ico">
-									<i class="icon-sitemap icon-4x icon-only"></i>
+									<i class="fa fa-sitemap fa-4x icon-only"></i>
 									
 								</div>
 								<div class="summary-info">
@@ -307,3 +309,128 @@
 		</div><!-- /.col -->
 	</div><!-- /.row -->
 </div><!-- /.page-content -->
+
+<!-- page specific plugin scripts -->
+<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
+<script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
+<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+<script src="{% static 'js/jquery.easy-pie-chart.min.js' %}"></script>
+<script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
+<script src="{% static 'js/flot/jquery.flot.min.js' %}"></script>
+<script src="{% static 'js/flot/jquery.flot.pie.min.js' %}"></script>
+<script src="{% static 'js/flot/jquery.flot.resize.min.js' %}"></script>
+<script type="text/javascript">
+            jQuery(function($) {
+                $('.easy-pie-chart.percentage').each(function(){
+                    var $box = $(this).closest('.infobox');
+                    var barColor = $(this).data('color') || (!$box.hasClass('infobox-dark') ? $box.css('color') : 'rgba(255,255,255,0.95)');
+                    var trackColor = barColor == 'rgba(255,255,255,0.95)' ? 'rgba(255,255,255,0.25)' : '#E2E2E2';
+                    var size = parseInt($(this).data('size')) || 50;
+                    $(this).easyPieChart({
+                        barColor: barColor,
+                        trackColor: trackColor,
+                        scaleColor: false,
+                        lineCap: 'butt',
+                        lineWidth: parseInt(size/10),
+                        animate: /msie\s*(8|7|6)/.test(navigator.userAgent.toLowerCase()) ? false : 1000,
+                        size: size
+                    });
+                })
+            
+                $('.sparkline').each(function(){
+                    var $box = $(this).closest('.infobox');
+                    var barColor = !$box.hasClass('infobox-dark') ? $box.css('color') : '#FFF';
+                    $(this).sparkline('html', {tagValuesAttribute:'data-values', type: 'bar', barColor: barColor , chartRangeMin:$(this).data('min') || 0} );
+                });
+            
+            
+            
+            
+              var placeholder = $('#piechart-placeholder').css({'width':'90%' , 'min-height':'150px'});
+              var data = [
+                { label: "social networks",  data: 38.7, color: "#68BC31"},
+                { label: "search engines",  data: 24.5, color: "#2091CF"},
+                { label: "ad campaigns",  data: 8.2, color: "#AF4E96"},
+                { label: "direct traffic",  data: 18.6, color: "#DA5430"},
+                { label: "other",  data: 10, color: "#FEE074"}
+              ]
+              function drawPieChart(placeholder, data, position) {
+                  $.plot(placeholder, data, {
+                    series: {
+                        pie: {
+                            show: true,
+                            tilt:0.8,
+                            highlight: {
+                                opacity: 0.25
+                            },
+                            stroke: {
+                                color: '#fff',
+                                width: 2
+                            },
+                            startAngle: 2
+                        }
+                    },
+                    legend: {
+                        show: true,
+                        position: position || "ne", 
+                        labelBoxBorderColor: null,
+                        margin:[-30,15]
+                    }
+                    ,
+                    grid: {
+                        hoverable: true,
+                        clickable: true
+                    }
+                 })
+             }
+             drawPieChart(placeholder, data);
+            
+             /**
+             we saved the drawing function and the data to redraw with different position later when switching to RTL mode dynamically
+             so that's not needed actually.
+             */
+             placeholder.data('chart', data);
+             placeholder.data('draw', drawPieChart);
+            
+            
+            
+              var $tooltip = $("<div class='tooltip top in'><div class='tooltip-inner'></div></div>").hide().appendTo('body');
+              var previousPoint = null;
+            
+              placeholder.on('plothover', function (event, pos, item) {
+                if(item) {
+                    if (previousPoint != item.seriesIndex) {
+                        previousPoint = item.seriesIndex;
+                        var tip = item.series['label'] + " : " + item.series['percent']+'%';
+                        $tooltip.show().children(0).text(tip);
+                    }
+                    $tooltip.css({top:pos.pageY + 10, left:pos.pageX + 10});
+                } else {
+                    $tooltip.hide();
+                    previousPoint = null;
+                }
+                
+             });
+
+                var d1 = [];
+                for (var i = 0; i < Math.PI * 2; i += 0.5) {
+                    d1.push([i, Math.sin(i)]);
+                }
+            
+                var d2 = [];
+                for (var i = 0; i < Math.PI * 2; i += 0.5) {
+                    d2.push([i, Math.cos(i)]);
+                }
+            
+                var d3 = [];
+                for (var i = 0; i < Math.PI * 2; i += 0.2) {
+                    d3.push([i, Math.tan(i)]);
+                }
+    
+            });
+            
+            // make the endpoint info table have the same height as widget
+            $(".widget-body").bind('resize', function(){
+                $('#endpoint_info_table').css('height', $(".widget-body").outerHeight())
+            });
+</script>
