--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,8 +7,8 @@
 				<div class="navbar-header pull-left">
 					<a href="#" class="navbar-brand">
 						<small>
-							<i class="icon-leaf"></i>
-							ACE后台管理系统
+							<i class="fa fa-leaf"></i>
+							HSC漏洞实验平台
 						</small>
 					</a><!-- /.brand -->
 				</div><!-- /.navbar-header -->
@@ -17,13 +17,13 @@
 					<ul class="nav ace-nav">
 						<li class="grey">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<i class="icon-tasks"></i>
+								<i class="fa fa-tasks"></i>
 								<span class="badge badge-grey">4</span>
 							</a>
 
 							<ul class="pull-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
 								<li class="dropdown-header">
-									<i class="icon-ok"></i>
+									<i class="fa fa-ok"></i>
 									还有4个任务完成
 								</li>
 
@@ -82,7 +82,7 @@
 								<li>
 									<a href="#">
 										查看任务详情
-										<i class="icon-arrow-right"></i>
+										<i class="fa fa-arrow-right"></i>
 									</a>
 								</li>
 							</ul>
@@ -90,13 +90,13 @@
 
 						<li class="purple">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<i class="icon-bell-alt icon-animated-bell"></i>
+								<i class="fa fa-bell-alt fa fa-animated-bell"></i>
 								<span class="badge badge-important">8</span>
 							</a>
 
 							<ul class="pull-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
 								<li class="dropdown-header">
-									<i class="icon-warning-sign"></i>
+									<i class="fa fa-warning-sign"></i>
 									8条通知
 								</li>
 
@@ -104,7 +104,7 @@
 									<a href="#">
 										<div class="clearfix">
 											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-pink icon-comment"></i>
+												<i class="btn btn-xs no-hover btn-pink fa fa-comment"></i>
 												新闻评论
 											</span>
 											<span class="pull-right badge badge-info">+12</span>
@@ -114,7 +114,7 @@
 
 								<li>
 									<a href="#">
-										<i class="btn btn-xs btn-primary icon-user"></i>
+										<i class="btn btn-xs btn-primary fa fa-user"></i>
 										切换为编辑登录..
 									</a>
 								</li>
@@ -123,7 +123,7 @@
 									<a href="#">
 										<div class="clearfix">
 											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-success icon-shopping-cart"></i>
+												<i class="btn btn-xs no-hover btn-success fa fa-shopping-cart"></i>
 												新订单
 											</span>
 											<span class="pull-right badge badge-success">+8</span>
@@ -135,7 +135,7 @@
 									<a href="#">
 										<div class="clearfix">
 											<span class="pull-left">
-												<i class="btn btn-xs no-hover btn-info icon-twitter"></i>
+												<i class="btn btn-xs no-hover btn-info fa fa-twitter"></i>
 												粉丝
 											</span>
 											<span class="pull-right badge badge-info">+11</span>
@@ -146,7 +146,7 @@
 								<li>
 									<a href="#">
 										查看所有通知
-										<i class="icon-arrow-right"></i>
+										<i class="fa fa-arrow-right"></i>
 									</a>
 								</li>
 							</ul>
@@ -154,13 +154,13 @@
 
 						<li class="green">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-								<i class="icon-envelope icon-animated-vertical"></i>
+								<i class="fa fa-envelope fa fa-animated-vertical"></i>
 								<span class="badge badge-success">5</span>
 							</a>
 
 							<ul class="pull-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
 								<li class="dropdown-header">
-									<i class="icon-envelope-alt"></i>
+									<i class="fa fa-envelope-alt"></i>
 									5条消息
 								</li>
 
@@ -174,7 +174,7 @@
 											</span>
 
 											<span class="msg-time">
-												<i class="icon-time"></i>
+												<i class="fa fa-time"></i>
 												<span>1分钟以前</span>
 											</span>
 										</span>
@@ -191,7 +191,7 @@
 											</span>
 
 											<span class="msg-time">
-												<i class="icon-time"></i>
+												<i class="fa fa-time"></i>
 												<span>20分钟以前</span>
 											</span>
 										</span>
@@ -208,7 +208,7 @@
 											</span>
 
 											<span class="msg-time">
-												<i class="icon-time"></i>
+												<i class="fa fa-time"></i>
 												<span>下午3:15</span>
 											</span>
 										</span>
@@ -218,7 +218,7 @@
 								<li>
 									<a href="inbox.html">
 										查看所有消息
-										<i class="icon-arrow-right"></i>
+										<i class="fa fa-arrow-right"></i>
 									</a>
 								</li>
 							</ul>
@@ -232,20 +232,20 @@
 									Jason
 								</span>
 
-								<i class="icon-caret-down"></i>
+								<i class="fa fa-caret-down"></i>
 							</a>
 
 							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
 								<li>
 									<a href="#">
-										<i class="icon-cog"></i>
+										<i class="fa fa-cog"></i>
 										设置
 									</a>
 								</li>
 
 								<li>
 									<a href="#">
-										<i class="icon-user"></i>
+										<i class="fa fa-user"></i>
 										个人资料
 									</a>
 								</li>
@@ -254,7 +254,7 @@
 
 								<li>
 									<a href="#">
-										<i class="icon-off"></i>
+										<i class="fa fa-off"></i>
 										退出
 									</a>
 								</li>
