solve the problem of VulnContainerSerializer's key error

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -38,20 +38,7 @@
 		<div class="col-xs-12 col-md-12">
 			<!-- PAGE CONTENT BEGINS -->
 
-			<div class="alert alert-block alert-success">
-				<button type="button" class="close" data-dismiss="alert">
-					<i class="fa fa-remove"></i>
-				</button>
-
-				<i class="icon-ok green"></i>
-
-				欢迎使用
-				<strong class="green">
-					Ace后台管理系统
-					<small>(v1.2)</small>
-				</strong>
-				,轻量级好用的后台管理系统模版.	
-			</div>
+			{% include 'alert_block.html' %}
 
 			<div class="row">
 				<div class="space-6"></div>
