--- a/app/templates/vuln_container.html
+++ b/app/templates/vuln_container.html
@@ -94,7 +94,7 @@
                                 <tr>
                                     <th class="center">
                                         <label>
-                                            <input type="checkbox" class="ace" ng-model="allChecked" ng-change="selectAll"/>
+                                            <input type="checkbox" class="ace" ng-model="allChecked" ng-change="selectAllItems(allChecked)"/>
                                             <span class="lbl"></span>
                                         </label>
                                     </th>
@@ -116,7 +116,7 @@
                                 <tr ng-repeat="vulnContainer in $data | filter:filterText">
                                     <td class="center">
                                         <label>
-                                            <input type="checkbox" class="ace" ng-model="vulnContainer.checked" ng-change="selectContainer(vulnContainer)"/>
+                                            <input type="checkbox" class="ace vulncontainer" ng-model="vulnContainer.checked" ng-change="selectContainer(vulnContainer)"/>
                                             <span class="lbl"></span>
                                         </label>
                                     </td>
