--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="breadcrumbs" id="breadcrumbs">
+<div class="breadcrumbs" id="breadcrumbs" >
 	<script type="text/javascript">
 		try{ace.settings.check('breadcrumbs' , 'fixed')}catch(e){}
 	</script>
@@ -23,7 +23,7 @@
 	</div><!-- #nav-search -->
 </div>
 
-<div class="page-content">
+<div class="page-content" ng-controller='nodeInfoController'>
 	<div class="page-header">
 		<h1>
 			控制台
@@ -52,7 +52,7 @@
 
 						</div>
 					{% verbatim %}
-					<div class="table-responsive" ng-controller='nodeInfoController'>
+					<div class="table-responsive" >
 						<table id="endpoint_info_table" class="table table-striped table-bordered table-hover">
 
 
