--- a/app/templates/staticfiles.html
+++ b/app/templates/staticfiles.html
@@ -36,6 +36,7 @@
  <script src="{% static 'js/angular/angular-ui-router.min.js' %}" type="text/javascript"></script>
  <script src="{% static 'js/angular/ng-table.min.js' %}"></script>
  <script src="{% static 'js/angular/ui-bootstrap-tpls.js' %}"></script>
+ <script src="{% static 'js/angular/tree-view.min.js' %}"></script>
 
 <!-- ace scripts -->
 <script src="{% static 'js/ace-elements.min.js' %}"></script>
