--- a/app/templates/staticfiles.html
+++ b/app/templates/staticfiles.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="{% static 'css/ace-rtl.min.css' %}" />
 <link rel="stylesheet" href="{% static 'css/ace-skins.min.css' %}" />
 
+<!-- tree-control styles -->
+<link rel="stylesheet" href="{% static 'css/tree-control.css' %}" />
 
 <!-- vultrainer styles -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/vultrainer.min.css' %}">
@@ -36,7 +38,7 @@
  <script src="{% static 'js/angular/angular-ui-router.min.js' %}" type="text/javascript"></script>
  <script src="{% static 'js/angular/ng-table.min.js' %}"></script>
  <script src="{% static 'js/angular/ui-bootstrap-tpls.js' %}"></script>
- <script src="{% static 'js/angular/tree-view.min.js' %}"></script>
+ <script src="{% static 'js/angular/angular-tree-control.js' %}"></script>
 
 <!-- ace scripts -->
 <script src="{% static 'js/ace-elements.min.js' %}"></script>
