--- a/app/templates/vulhub_mode.html
+++ b/app/templates/vulhub_mode.html
@@ -14,12 +14,12 @@
                 <div class="widget-header header-color-blue2">
                     <h4 class="lighter smaller">Vulnerable Target in Vulhub</h4>
                 </div>
-                <div class="widget-body">
+                <div class="widget-body slimScrollDiv auto-scroll height-300">
                     <div class="widget-main padding-8">
                         <div id="tree1" class="tree">
                             <!-- <tree-view tree-service="vulhubTree" node-label="name" item-class="pull-left"></tree-view> -->
-                            <treecontrol class="tree-boot" tree-model="vulhubData" option="vulhubTreeOptions">
-                                treenode: {{node.id}} {{node.name}}
+                            <treecontrol class="tree-boot" tree-model="vulhubData" options="vulhubTreeOptions" on-selection="showSelected(node)">
+                                {{node.name}}
                             </treecontrol>
                         </div>
                     </div>
@@ -30,14 +30,17 @@
             <button type="button" class="close" data-dismiss="alert">
                 <i class="fa fa-remove"></i>
             </button>
-            <strong><i class="fa fa-remove"></i> Error!</strong> You must choose a mode.
+            <strong><i class="fa fa-remove"></i> Error!</strong> Can not retrieve the vulhub cases!
             <br />
         </div>
         <hr />
         <div class="space"></div>
         <div class="center">
-            <button class="btn btn-primary" ng-click="confirm()">
-                <i class="fa fa-check"></i> Confirm
+            <button class="btn btn-success" ng-click="update()">
+                <i class="fa fa-cloud"></i> Update
+            </button>
+            <button class="btn btn-primary" ng-disabled="selectedNode==''" ng-click="next()">
+                <i class="fa fa-arrow-right"></i> Next
             </button>
             <button class="btn btn-danger" ng-click="cancel()">
                 <i class="fa fa-times"></i> Cancel
