init create_vulhub_container page

--- a/app/templates/staticfiles.html
+++ b/app/templates/staticfiles.html
@@ -39,6 +39,7 @@
  <script src="{% static 'js/angular/ng-table.min.js' %}"></script>
  <script src="{% static 'js/angular/ui-bootstrap-tpls.js' %}"></script>
  <script src="{% static 'js/angular/angular-tree-control.js' %}"></script>
+ <script src="{% static 'js/angular/angular-file-upload.min.js' %}"></script>
 
 <!-- ace scripts -->
 <script src="{% static 'js/ace-elements.min.js' %}"></script>
@@ -46,4 +47,9 @@
 
 <!-- vultrainer scripts -->
 <script src="{% static 'js/vultrainer.min.js' %}" type="text/javascript"></script>
+
+<!-- bootstrap.fileinput -->
+<link rel="stylesheet" href="{% static 'css/fileinput.min.css' %}" />
+<script src="{% static 'js/fileinput.min.js' %}" type="text/javascript"></script>
+
 
