--- a/static_src/css/vulnContainer.css
+++ b/static_src/css/vulnContainer.css
@@ -10,3 +10,10 @@
 .height-300{
     height: 300px;
 }
+.no-resize-150{
+    resize: none;
+    height: 150px;
+}
+.label-font-blue{
+    color: #337ab7!important;
+}
